# itgmania_cards_server

./: Cargo.toml  LICENSE  README.md  Rocket.toml  config.toml  reader.toml
patch/: MemoryCardDriverThreaded_Linux.cpp
src/: accounts.rs  auth.rs  cards_manager.rs  config.rs  main.rs  socket_server.rs  templates.rs  web_server.rs
src/cards/: card_type.rs  cards_manager.rs  mod.rs
src/reader/: reader.rs
src/reader/types/: mod.rs  serial_arduino_reader.rs
templates/: home.html  login.html
