[package]
name = "ITGManiaCardsServer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["rt", "macros", "rt-multi-thread"] }
rocket = { version = "0.5.1", features = ["secrets"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4.43"
